Fixed 0.8-B4
0.8-B4. name column gets way too wide

--- a/src/components/Table/Table.css
+++ b/src/components/Table/Table.css
@@ -57,6 +57,8 @@ th small {
   left: 0;
   z-index: 10;
   background-color: #fff;
+  width: 200px;
+  min-width: 200px;
 }
 
 .name-column::before {
